# blog

./: .dist.env  .flake8  .flaskenv  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  commands.py  config.py  database.py  extensions.py  models.py
app/main/: forms.py  views.py
app/static/: about.md  projects.md
app/static/markdown/: about.md  projects.md
app/static/styles/: style.css
app/templates/: layout.html
app/templates/main/: about.html  index.html  new.html  post.html  projects.html  update.html
